--- a/backend/package.json
+++ b/backend/package.json
@@ -15,7 +15,9 @@
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "express-validator": "^6.6.0",
-    "mongoose": "^5.9.26"
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^5.9.26",
+    "twilio": "^3.48.1"
   },
   "devDependencies": {
     "eslint": "^7.5.0",
