--- a/backend/package.json
+++ b/backend/package.json
@@ -4,25 +4,27 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon index.js",
-    "start": "NODE_ENV=production node index.js"
+    "start": "node .",
+    "dev": "nodemon ."
   },
   "author": "Christian | Jesus | Danny | John",
   "license": "MIT",
   "dependencies": {
     "bcrypt": "^5.0.0",
     "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-validator": "^6.6.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.26",
+    "mongoose-aggregate-paginate-v2": "^1.0.42",
     "twilio": "^3.48.1"
   },
   "devDependencies": {
     "eslint": "^7.5.0",
     "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-prettier": "^3.1.4",
+    "nodemon": "^2.0.4",
     "prettier": "^2.0.5"
   },
   "husky": {
