--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,8 +8,9 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
-    "antd": "^4.5.1",
+    "antd": "^4.5.2",
     "axios": "^0.19.2",
+    "express": "^4.17.1",
     "node-sass": "^4.14.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
