--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,10 +11,13 @@
     "antd": "^4.5.1",
     "axios": "^0.19.2",
     "node-sass": "^4.14.1",
+    "query-string": "^6.13.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-player": "^2.6.0",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.1"
+    "react-scripts": "3.4.1",
+    "socket.io-client": "^2.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
